Tue Jun 22 15:18:57 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/connector_dds_ex_base.cpp:
        
          Changed generation of connector impl base class name to
          always use the IDL connector name with '_Connector_T'
          appended.

Tue Jun 22 14:04:05 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp(gen_connector_traits):
        
          Changed component scope visitation to include base component(s),
          if any.

Tue Jun 22 13:13:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Alt_Mapping/driver.h:
        * tests/Alt_Mapping/ub_string.h:
          Fixed casing of includes

Tue Jun 22 12:35:37 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/ast_interface.h:
        * TAO_IDL/ast/ast_interface.cpp:

          Added new member and accessors to store and retrieve the
          ami4ccm receptacle implied IDL interface, if any, insuring
          that the AMI4CCM_* interface is created at most once per
          interface uses type.

        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:

          Uses the new member and accessors above when creating
          the dummy AMI4CCM_* interface (non-code-generating)
          to be used in the main IDL file (while the real AMI4CCM_*
          interface is in the *A.idl file).

Mon Jun 21 18:45:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_ex_base.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/executor_ami_exh.cpp:
        * TAO_IDL/be/be_visitor_connector/facet_ami_exh.cpp:
          Layout and const changes
